--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "bumbummen99/shoppingcart": "*",
         "guzzlehttp/guzzle": "^7.2",
         "kyslik/column-sortable": "^6.4",
         "laravel/framework": "^9.2",
