--- a/.env
+++ b/.env
@@ -47,3 +47,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 CARRIAGE=800
+
+PAYJP_PUBLIC_KEY=pk_test_b2b54ee5bd70bc8930d70ac3
+PAYJP_SECRET_KEY=sk_test_d703d661b6f0d2db33f4a0d8
