--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/ui": "^3.4",
         "maatwebsite/excel": "*",
         "nesbot/carbon": "^2.57",
-        "overtrue/laravel-favorite": "^5.0"
+        "overtrue/laravel-favorite": "^5.0",
+        "payjp/payjp-php": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
